--- a/leopards.yaml
+++ b/leopards.yaml
@@ -1,8 +1,8 @@
 team: Leopards
 
-manager: Peter
+manager: Dooli
 
-coach: Rocket
+coach: Lupi
 
 members:
 - Linda
@@ -11,6 +11,5 @@ members:
 - Olivia
 - Evie
 - Dongho
-- Drax
-- Groot
-
+- Stash2
+- Stash4
